# raytracer

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix  playground.ggb
src/: camera.rs  main.rs  object.rs  ray.rs  vector.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/object/: mod.rs  sphere.rs
