[package]
name = "raytracer"
version = "0.1.0"
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
edition = "2021"
publish = false
repository = "https://github.com/DoctorDalek1963/raytracer"
license = "GPL-3.0"
description = "A simple raytracer based on <https://rs118.uwcs.co.uk/raytracer.html>"

[dependencies]
color-eyre = "0.6.2"
image = { version = "0.24.8", features = ["rayon"] }
rayon = "1.8.1"

[profile.release]
lto = "fat"
