[package]
name = "raytracer"
version = "0.1.0"
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
edition = "2021"
publish = false
repository = "https://github.com/DoctorDalek1963/raytracer"
license = "GPL-3.0"
description = "A simple raytracer based on <https://rs118.uwcs.co.uk/raytracer.html>"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
color-eyre = "0.6.2"
image = { version = "0.24.8", features = ["rayon"] }
indicatif = { version = "0.17.8", features = ["rayon"] }
rand = "0.8.5"
rayon = "1.8.1"
softbuffer = "0.4.1"
winit = "0.29.15"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
